examples/kraken-example/public/templates/errors/http_503.int
from errors import render
render(503, url, err)
